--- a/templates/after.html
+++ b/templates/after.html
@@ -80,6 +80,9 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <body>
+
+
+
 <h1 style="text-align:center">Prediction Result</h1>
 
         <table class="content-table" style="margin-left:auto;margin-right:auto;">
@@ -204,10 +207,17 @@
     var imgdata = canvas.toDataURL('image/png')
     var doc = new jspdf()
     doc.addImage(imgdata,'PNG',-145,10)
-    doc.save("Patient.pdf")
+    doc.save(date_time +"Patient.pdf")
     })
     
   }
+</script>
+
+<script>
+	var date = new Date();
+	var current_date = date.getFullYear()+"-"+(date.getMonth()+1)+"-"+ date.getDate();
+	var current_time = date.getHours()+":"+date.getMinutes()+":"+ date.getSeconds();
+	var date_time = current_date+" "+current_time;	
 </script>
 
 </html>
