--- a/templates/after.html
+++ b/templates/after.html
@@ -188,10 +188,10 @@
         </br>
     
         <div class="container">
-            <a href="/" class="button blue">Back</a>
+            <a href="/" class="btn btn-warning btn-block btn-large">Back</a>
         </div>
-        <div class="container">
-          <button onclick="screenshot()">Take screenshot</button>
+        <div class="container" style="margin-top :30px;">
+          <button type="submit" class="btn btn-success btn-block btn-large" onclick="screenshot()">Save PDF file</button>
       </div>
 
         
@@ -219,6 +219,16 @@
 	var current_time = date.getHours()+":"+date.getMinutes()+":"+ date.getSeconds();
 	var date_time = current_date+" "+current_time;	
 </script>
+<head>
 
+  <!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>     
+
+<!-- Bootstrap Javascripts -->  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
 </html>
 
